--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-navigation-menu": "1.1.3",
     "@radix-ui/react-popover": "1.0.6",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
